-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8-shenandoah, 11.0.9, 14, 15
-
Component/s: hotspot
-
b33
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8237558 | 15 | Zhengyu Gu | P3 | Resolved | Fixed | b07 |
| JDK-8237714 | 14.0.2 | Zhengyu Gu | P3 | Resolved | Fixed | master |
| JDK-8238131 | 14.0.1 | Unassigned | P3 | Resolved | Fixed | b02 |
| JDK-8261320 | 11.0.11 | Zhengyu Gu | P3 | Resolved | Fixed | b02 |
Solution: remove the assertion.
- backported by
-
JDK-8237558 Shenandoah: Remove unreliable assertion
-
- Resolved
-
-
JDK-8237714 Shenandoah: Remove unreliable assertion
-
- Resolved
-
-
JDK-8238131 Shenandoah: Remove unreliable assertion
-
- Resolved
-
-
JDK-8261320 Shenandoah: Remove unreliable assertion
-
- Resolved
-
- relates to
-
JDK-8237369 Shenandoah: failed vmTestbase/nsk/jvmti/AttachOnDemand/attach021/TestDescription.java test
-
- Resolved
-