8237392: Shenandoah: Remove unreliable assertion

Reviewed-by: shade