src/hotspot/share/gc/shenandoah/shenandoahHeap.cpp
@@ -1332,9 +1332,6 @@ void ShenandoahHeap::object_iterate(ObjectClosure* cl) {
 void ShenandoahHeap::keep_alive(oop obj) {
   if (is_concurrent_mark_in_progress()) {
     ShenandoahBarrierSet::barrier_set()->enqueue(obj);
-  } else {
-    // Otherwise, it must be live, guaranteed by LRB
-    shenandoah_assert_marked_if(NULL, obj, has_forwarded_objects());
   }
 }
 
